--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - name: install dependencies
-          command: |
+          command:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
