reformating from command in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       - checkout
       - name: install dependencies
           command:
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
+            - python3 -m venv venv
+            - .venv/bin/activate
+            - pip install -r requirements.txt
       - run: python3 main.py
 
 workflows:
