--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,8 @@ jobs:
       - image: "circleci/python:3.10.2"
     steps:
       - checkout
-      - name: install dependencies
-          command:
-            - python3 -m venv venv
-            - .venv/bin/activate
-            - pip install -r requirements.txt
+      - python/install-packages:
+          pkg-manager: pip
       - run: python3 main.py
 
 workflows:
