changed build_and_test: to build:

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,6 @@ jobs:
       - run: python3 main.py
 
 workflows:
-  build_and_test:
+  build:
     jobs:
       - build
-      - test:
-          requires:
-            - build
