--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,34 @@
-version: 2.1
-
-jobs:
-  build:
-    working_directory: ~/circleci-python
+ build:
     docker:
-      - image: "circleci/python:3.6.4"
+      # specify the version you desire here
+      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
+      - image: circleci/python:3.10.2-browsers
+      
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - run: python3 main.py
-  test:
-    working_directory: ~/circleci-python
-    docker:
-      - image: "circleci/python:3.10.2"
-    steps:
-      - checkout
-      - python/install-packages:
-          pkg-manager: pip
-      - run: python3 main.py
 
-workflows:
-  build:
-    jobs:
-      - build
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "requirements.txt" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
