--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,13 @@ orbs:
 jobs:
   build:
     working_directory: ~/circleci-python
+    docker:
+      - image: "circleci/python:3.10.2-browsers"
     steps:
       - checkout
       - python/install-packages:
             pkg-manager: pip
-      - run: python3 main.py
+      - run: python main.py
 workflows:
   build_and_test:
     jobs:
