added google-chrome in config.yml command.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,11 @@ jobs:
       - run:
           name: run main
           # This assumes pytest is installed via the install-package step above
-          command: python main.py
+          command:
+            google-chrome --version
+            chromedriver --version
+            python main.py
+
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
