--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,13 +33,13 @@ jobs:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
+      - browser-tools/install-chrome:
+          - replace-existing: true
+      - browser-tools/install-chromedriver
       - run:
           name: run main
           # This assumes pytest is installed via the install-package step above
-          command: |
-            google-chrome --version
-            chromedriver --version
-            python main.py
+          command: python main.py
 
 
 # Invoke jobs via workflows
