--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,13 @@ orbs:
   python: circleci/python@1.5.0
   browser-tools: circleci/browser-tools@1.2.4
 
+  commands:
+    build_vinterior_app:
+      steps:
+        - browser-tools/install-chrome:
+              - replace-existing: true
+          - browser-tools/install-chromedriver
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -34,9 +41,6 @@ jobs:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
-      - browser-tools/install-chrome:
-          - replace-existing: true
-      - browser-tools/install-chromedriver
       - run:
           name: run main
           # This assumes pytest is installed via the install-package step above
