--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ orbs:
   # so you dont have to copy and paste it everywhere.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
   python: circleci/python@1.5.0
-  browser-tools: circleci/browser-tools@1.2.4
+  browser-tools: circleci/browser-tools@1.2.4 # Needed to run Selenium
 
 #  commands:
 #    build_vinterior_app:
@@ -41,8 +41,8 @@ jobs:
           pkg-manager: pip
           # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
-      - browser-tools/install-chrome
-      - browser-tools/install-chromedriver
+      - browser-tools/install-chrome # Needed to run Selenium
+      - browser-tools/install-chromedriver # Needed to run Selenium
       - run:
           name: run main
           # This assumes pytest is installed via the install-package step above
